feat styles animation

--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
 
                     <div class="social">
                         <a href=""><i class="fa-brands fa-instagram"></i></a>
-                        <a href="https://github.com/Davgcore"><i class="fa-brands fa-github"></i></a>
-                        <a href="https://www.linkedin.com/notifications/?filter=all"><i class="fa-brands fa-linkedin"></i></a>
+                        <a href="https://github.com/Davgcore" target="_blank"><i class="fa-brands fa-github"></i></a>
+                        <a href="https://www.linkedin.com/notifications/?filter=all" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
                     </div>
                 </div>
             </header>
             <div class="about">
                 <p class="hi">welcom</p>
-                <h2 class="presentation">I'm <span>David Galvez</span> full stack developer</h2>
+                <h2 class="presentation">I'm <p>David Galvez full stack developer</p></h2>
                 <p class="description" >Lorem ipsum dolor sit amet consectetur, adipisicing elit.
                     Nemo veritatis, libero, iure alias, officia possimus doloribus sit temporibus natus aut aperiam deleniti 
                     repellat praesentium accusantium.</p>
@@ -193,7 +193,7 @@
             <div class="lista">
                 <div class="project">
                     <div class="overlay"></div>
-                    <a href="https://main--darling-griffin-a33c29.netlify.app/"><img src="/img/proyecto1.jpg" h alt="project1"></a>
+                    <a href="https://main--darling-griffin-a33c29.netlify.app/" target="_blank" ><img src="/img/proyecto1.jpg" h alt="project1"></a>
                     <div class="info">
                         <h4>Project Description</h4>
                         <p>Web desing</p>
@@ -202,7 +202,7 @@
 
                 <div class="project">
                     <div class="overlay"></div>
-                    <a href="https://cozy-pasca-594acb.netlify.app/"><img src="/img/project2.PNG" alt="project2"></a> 
+                    <a href="https://cozy-pasca-594acb.netlify.app/" target="_blank"><img src="/img/project2.PNG" alt="project2"></a> 
                     <div class="info">
                         <h4>Project Description</h4>
                         <p>Web desing</p>
@@ -211,7 +211,7 @@
 
                 <div class="project">
                     <div class="overlay"></div>
-                    <a href="https://jovial-centaur-4f0473.netlify.app/"><img src="/img/project3.PNG" alt="project3"></a> 
+                    <a href="https://jovial-centaur-4f0473.netlify.app/" target="_blank"><img src="/img/project3.PNG" alt="project3"></a> 
                     <div class="info">
                         <h4>Project Description</h4>
                         <p>Web desing</p>
@@ -220,12 +220,23 @@
 
                 <div class="project">
                     <div class="overlay"></div>
-                    <a href="https://jocular-puppy-465903.netlify.app/"><img src="/img/project4.PNG" alt="project4"></a>
+                    <a href="https://jocular-puppy-465903.netlify.app/" target="_blank"><img src="/img/project4.PNG" alt="project4"></a>
                     <div class="info">
                         <h4>Project Description</h4>
                         <p>Web desing</p>
                     </div>
                 </div>
+
+                <div class="project">
+                    <div class="overlay"></div>
+                    <a href="https://darling-concha-fa881d.netlify.app/" target="_blank"><img src="/img/project5.png" alt="project5"></a>
+                    <div class="info">
+                        <h4>Project Description</h4>
+                        <p>Web desing</p>
+                    </div>
+                </div>
+
+
             </div>
     </section>
 
@@ -254,8 +265,8 @@
         <p>Made and desing by david Galvez</p>
         <div class="social">
             <a href=""><i class="fa-brands fa-instagram"></i></a>
-            <a href="https://github.com/Davgcore"><i class="fa-brands fa-github"></i></a>
-            <a href="https://www.linkedin.com/notifications/?filter=all"><i class="fa-brands fa-linkedin"></i></a>
+            <a href="https://github.com/Davgcore" target="_blank"><i class="fa-brands fa-github"></i></a>
+            <a href="https://www.linkedin.com/notifications/?filter=all" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
         </div>
     </footer>
 
