--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 
                     <div class="social">
                         <a href=""><i class="fa-brands fa-instagram"></i></a>
-                        <a href="https://github.com/Davgcore" target="_blank"><i class="fa-brands fa-github"></i></a>
-                        <a href="https://www.linkedin.com/notifications/?filter=all" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+                        <a href="https://github.com/Davgcore/portfolio" target="_blank"><i class="fa-brands fa-github"></i></a>
+                        <a href="https://www.linkedin.com/in/david-galvez-304b35245/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
                     </div>
                 </div>
             </header>
